5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1635_2704.log
== TEST (2019-04-07 22:21:28) 
-- CODE:
n=float(input("nota do aluno: "))
l=input("var receber bonificacao? S/N")
if(l==S):
	n=(n+(n*0.1))
else:
	n=n
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(l==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:21:51) 
-- CODE:
n=float(input("nota do aluno: "))
l=input("var receber bonificacao? S/N")
if(l=="S"):
	n=(n+(n*0.1))
else:
	n=n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:22:00) 
-- CODE:
n=float(input("nota do aluno: "))
l=input("var receber bonificacao? S/N")
if(l=="S"):
	n=(n+(n*0.1))
else:
	n=n
print(n)
-- EXECUTION TIME:
0.191414
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
